--- a/Deep Learning/Image Classifier/Image Classifier Project.ipynb
+++ b/Deep Learning/Image Classifier/Image Classifier Project.ipynb
@@ -85,8 +85,7 @@
     "                                     transforms.RandomHorizontalFlip(),\n",
     "                                     transforms.ToTensor(),\n",
     "                                     transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])]),\n",
-    "    'valid_test' : transforms.Compose([transforms.RandomHorizontalFlip(),\n",
-    "                                     transforms.CenterCrop(224),\n",
+    "    'valid_test' : transforms.Compose([transforms.CenterCrop(224),\n",
     "                                     transforms.ToTensor(),\n",
     "                                     transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])])\n",
     "} \n",
